syntax = "proto3";

import "base.proto";

package marketplaceproto;

message Product {
    int32 ID =1;
    int32 ShopID = 2;
    string Name = 3;
    int32 Quantity = 4;
    int32 PricePerKG = 5;
    float StockKG =6;
    int64 CreatedAt = 7;
    int64 UpdatedAt =8;
}

message ListProductsReq {
    Pagination pagination = 2;
}

message ListProductsResp {
    repeated Product Products = 1;
}